<resources>
    <string name="app_name">Nearby Improvement</string>
    <string name="service_id">com.example.nearbyimprovement</string>
    <string name="nickname">NickName:</string>
    <string name="comportamento">Comportamento:</string>
    <string name="confirmar_comportamento">Confirmar Comportamento</string>
    <string name="iniciar_descoberta_e_an_ncio">Iniciar descoberta ou anúncio</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_para">EndpointID Selecionado:</string>
    <string name="subscrever_servi_o">Subscrever serviço</string>
    <string name="modo">Modo:</string>
    <string name="confirmar_processamento">OK Process</string>
</resources>
