<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/lblViewNickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:gravity="start" />

        <EditText
            android:id="@+id/txtNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:gravity="start"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/lblViewComportamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comportamento"
            android:gravity="start" />

        <Spinner
            android:id="@+id/spinComportamento"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/lblViewModoAnuncDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modo"
            android:gravity="start" />

        <Spinner
            android:id="@+id/spinAnuncDesc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnConfirmarComportamento"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/confirmar_comportamento"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnIniciarDescobAnuncio"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/iniciar_descoberta_e_an_ncio"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"/>
        </LinearLayout>



        <TextView
            android:id="@+id/lblEnviarPara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar_para"
            android:gravity="start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinIdsConnected"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSubscreverServico"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/subscrever_servi_o"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMensagens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtMensagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:gravity="left"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="45dp"
                android:layout_height="45dp"


                android:background="@drawable/ic_send_black_24dp"
                android:backgroundTint="#00BCD4" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>